# sui-genesis-reader

./: Cargo.toml  README.md  setup.sh
output/: genesis-analysis.txt
src/: main.rs
